--- a/CampD/WebContent/static/css/common.css
+++ b/CampD/WebContent/static/css/common.css
@@ -349,8 +349,8 @@ a:hover{text-decoration:none;}
 	margin-bottom:5px;
 }
 .ac-detail-mechanism .adm-line{
-	height:33px;
-    line-height:33px;
+	/*height:33px;
+    line-height:33px;*/
 	position:relative;
 	font-size:15px;
 }
@@ -830,13 +830,13 @@ a:hover{text-decoration:none;}
  }
  .clearfix .newfr1{	
 	margin-right:5px;
-	width:90%;	
+	width:88%;	
 	padding-bottom:10px;
 	border-bottom:1px solid  rgba(32,35,37,0.16);
 }
  .clearfix .newfr2{	
 	margin-right:5px;
-	width:90%;	
+	width:88%;	
 	padding-bottom:10px;
 }
 .adt-desc  .newmat{
@@ -1008,16 +1008,16 @@ a:hover{text-decoration:none;}
 	
 }
 /*hd主办方，联合方*/
-.ac-detail-mechanism .newheight{
-	height:50px;
-	line-height:50px;
+.ac-detail-mechanism .adm-line {
+	padding:10px 2px 10px 2px;
 }
 .ac-detail-mechanism .adm-line .sponsor{
 	color:#949494;
+	width:15%;
 }
 .ac-detail-mechanism .adm-line .sponserInfo{
-	margin-left:10px;
-	margin-right:10px;	
+	width:85%;
+	display:inline;	
 }
 
 /*适用活动，基础设施*/
@@ -1029,22 +1029,16 @@ a:hover{text-decoration:none;}
 }
 .activebase .padt10{
 	padding-top:10px;
-	height:50px;
 }
 .activebase .active{
 	position:relative;
 }
- /*.bt_line{
-   height:0px;
-   border-bottom:1px solid rgba(32,35,37,0.16);
-}*/
 .activebase .padt10 .percent{
 	width:22%;
-	padding-top: 6px;
+	padding: 8px 2px 8px 2px;
 }
 .activebase .padt10 .consider{
-	width:75%;
-	margin-left:25%;
+	margin-left:2%;
 	margin-right:3%;
 }
 .activebase .padt10 .consider li.considerpic{
@@ -1282,30 +1276,7 @@ a:hover{text-decoration:none;}
 	}
 .ac-detail-mechanism .act{
 	position:relative;
-	height:50px;
-	line-height:50px;
 }
- .act .actstyle{
-	width:25%;
-}
- .act .category{
-	height:50px;	
-	padding-top:8px;
-}
- .act .category span{
-	padding-top:10px;
-	width:20%;
-	margin-left:2%;
-	margin-right:3%;
-	margin-bottom:5px;
-}
-
- .act .city  span{
-    height: 50px;
-    line-height: 50px;
-	margin-left:1%;
-	margin-right:2%;
-	}
 /*小三角*/
 .conrner {
   border-color:#a5a5a5 transparent transparent transparent;
@@ -1317,3 +1288,37 @@ a:hover{text-decoration:none;}
   top: 16px;
   margin-left: 8px;
 }
+/*礼品详情的活动类型修改*/
+.act{
+	padding:10px 10px 10px 2px;
+}
+.act .actstyle{
+	width:30%;
+}
+.act .city{
+	width:70%;
+}
+.gift-actstyle{
+	padding:5px 10px 10px 2px; 
+}
+.gift-actstyle .actstyle{
+	display:inline;
+	width:30%;
+	padding-top:12px;
+}
+.gift-actstyle .category{
+	width:70%;
+	padding-top:5px;
+}
+.gift-actstyle .category span{
+	margin-left:1%;
+	margin-right:3%;
+}
+/*场地基础设施和适用活动修改*/
+.activebase .padt10 .space-workfor{
+	width:78%;
+	display:inline-block;
+	padding:0px 2px 5px 1px;
+}
+
+
