--- a/CampD/WebContent/static/css/common.css
+++ b/CampD/WebContent/static/css/common.css
@@ -680,7 +680,9 @@ a:hover{text-decoration:none;}
 	font-size:11.5px;
 }
 .main .contain .c-top{
-	padding:0px 5px 4px 5px;
+	padding:0px 5px 0px 5px;
+	height: 24px;
+    line-height: 17px;
 }
 .main .contain .ul-box{
 	padding:0;
@@ -1385,7 +1387,9 @@ a:hover{text-decoration:none;}
 .firstlist .hotspace{
 	color:#484848;
 	font-size:13px;
-	padding-left:10px;
+	padding-left:5px;
+	margin-top:-4px;
+	font-size: 11.5px;
 	}
 .firstlist .more{
 	color:#818181;
@@ -1489,11 +1493,12 @@ a:hover{text-decoration:none;}
 	padding:8px;
 	}
  .gift-list-pic .rightbd{
-	border-right:1px solid #CCC;
+	border-right:1px solid  rgba(32,35,37,0.16);
 	}	
  .gift-list-pic .giftpic .giftword{
 	color:#484848;
 	font-size:13px;
+	padding-top:5px;
 	}	
 /*右上角菜单栏*/	
 .rightmenu-mc{
@@ -1570,7 +1575,4 @@ a:hover{text-decoration:none;}
   padding-top: 16px;
   padding-bottom: 6px;
   width: 100%;
-}
-.search-box .gift-workfor-list{
-	top:-1px;
 }
