--- a/CampD/WebContent/static/css/common.css
+++ b/CampD/WebContent/static/css/common.css
@@ -804,10 +804,10 @@ a:hover{text-decoration:none;}
 	color:#fff;
 }
 .tc-modal .close{
-	width:20px;
-	height:23px;
+	width:19px;
+	height:18px;
 	position:relative;
-	top:-292px;
+	top:-294px;
 	right:-119px;
 	background:#ccc;
 }
@@ -903,6 +903,7 @@ a:hover{text-decoration:none;}
  position:fixed;
  bottom:0px;
  background:#fff;
+ z-index:50;
  }
 
  .btn-box .btn{
@@ -1037,7 +1038,7 @@ a:hover{text-decoration:none;}
 .activebase .padt10 .consider li.considerpic{
 	float:left;
 	margin-right:8%;
-	
+	line-height: 25px;
 }
 .newheader{
 	position:fixed;
@@ -1339,27 +1340,35 @@ a:hover{text-decoration:none;}
 	position:relative;
 	}
 .mainlist .news{
-	position:relative;
+	width:100%;
 	}
 .mainlist .news	.newspic{
-	margin-top:8px;
-	margin-right:5px;
+     padding-top: 8px;
+     margin-left: 1%;
+     height: 32px;
+     line-height: 32px;
+     padding-bottom: 9px;
+      border-bottom: 1px solid rgba(16,2,7,0.06);
 	}
 .mainlist .news	.newsword{
 	font-family:"微软雅黑";
 	font-size:12px;
+	padding-left:2%;
 	height:32px;
 	line-height:32px;
+	overflow:hidden;
+	width:90%;
+	 border-bottom: 1px solid rgba(16,2,7,0.06);
 	}
 .mainlist .piclist{
 	width:100%;
-	height:112px;
+	height:130px;
 	}
 .mainlist .piclist .mainpic{
 	width:30%;
 	margin-left:2%;
     text-align:center;
-	padding-top:10px;
+	padding-top:17px;
 	}	
 .mainlist .piclist .mainpic .word{
 	font-family:"微软雅黑";
@@ -1368,8 +1377,8 @@ a:hover{text-decoration:none;}
 .contactus{
 	position:fixed;
 	display:block;
-	right:3px;
-	top:200px;
+	right:4px;
+	top:370px;
 	z-index:50;
 	}
 .space-ul-box{
@@ -1394,7 +1403,7 @@ a:hover{text-decoration:none;}
 .firstlist .more{
 	color:#818181;
 	font-size:13px;
-	padding-right:10px;
+	padding-right:5px;
 	}
 	
 /*newlist*/	
@@ -1498,7 +1507,7 @@ a:hover{text-decoration:none;}
  .gift-list-pic .giftpic .giftword{
 	color:#484848;
 	font-size:13px;
-	padding-top:5px;
+	padding-top:2px;
 	}	
 /*右上角菜单栏*/	
 .rightmenu-mc{
@@ -1584,4 +1593,8 @@ a:hover{text-decoration:none;}
 	line-height:32px;	
 	text-decoration:none;
 	color:#000;
+}
+/*系统颜色定义*/
+.red{
+	color: red;
 }
