--- a/CampD/WebContent/static/css/common.css
+++ b/CampD/WebContent/static/css/common.css
@@ -1032,7 +1032,7 @@ a:hover{text-decoration:none;}
 }
 .activebase .padt10 .percent{
 	width:30%;
-	padding: 8px 2px 8px 2px;
+	padding: 8px 2px 16px 2px;
 }
 .activebase .padt10 .consider{
 	margin-left:2%;
@@ -1504,6 +1504,7 @@ a:hover{text-decoration:none;}
 	font-size:13px;
 	padding-top:2px;
 	float:left;
+	padding-left:5px;
 	}	
 /*右上角菜单栏*/	
 .rightmenu-mc{
@@ -1593,4 +1594,71 @@ a:hover{text-decoration:none;}
 /*系统颜色定义*/
 .red{
 	color: red;
+}
+/*点击图片放大*/
+.max{
+	position:fixed;
+	top:0;
+	left:0;
+	width:100%;
+	height:100%;
+	background:#000;
+	z-index:50;
+	text-align:center;
+}
+.max .heiht30{
+	height:30%;
+}
+.max .addWrap1{
+	height:40%;
+	text-align:center;
+}
+#position1{
+  padding-right: 8px;
+  margin: 0;
+  opacity: 0.4;
+  width: 100%;
+  margin-top: 15%;
+}
+#position1 li.cur {
+  background-color: #FF0000;
+}
+#position1 li {
+  width: 10px;
+  height: 10px;
+  margin: 0 2px;
+  display: inline-block;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  background-color: #AFAFAF;
+}
+#mySwipe1{
+	height:100%;
+}
+#mySwipe1 .swipe-wrap img{
+	height:222px;
+}
+.worddescription1 {
+  position: absolute;
+  left: 0px;
+  bottom: -1px;
+  background: black;
+  width: 100%;
+  height: 47px;
+  color: #fff;
+  line-height: 20px;
+  padding-top: 15px;
+  font-size: 17px;
+}
+/*礼品详情 图片点击时变大*/
+.max .banner{
+	height:40%;
+}
+.max .banner .hdname1{
+  background: rgba(0,0,0,0.3);
+  width: 100%;
+  height: 49px;
+  color: #fff;
+  line-height: 43px;
+  font-size: 17px;
 }
