--- a/CampD/WebContent/static/css/common.css
+++ b/CampD/WebContent/static/css/common.css
@@ -1381,7 +1381,7 @@ a:hover{text-decoration:none;}
 	position:fixed;
 	display:block;
 	right:4px;
-	top:370px;
+	top:377px;
 	z-index:50;
 	}
 .space-ul-box{
@@ -1603,7 +1603,7 @@ a:hover{text-decoration:none;}
 	width:100%;
 	height:100%;
 	background:#000;
-	z-index:50;
+	z-index:51;
 	text-align:center;
 }
 .max .heiht30{
@@ -1662,3 +1662,111 @@ a:hover{text-decoration:none;}
   line-height: 43px;
   font-size: 17px;
 }
+/*下拉加载*/
+.outer{
+		  position: absolute;
+		  width: 100%;
+		  /*height: 100%;*/
+		  display: -webkit-box;
+		  display: -webkit-flex;
+		  display: -ms-flexbox;
+		  display: flex;
+		  -ms-flex-direction: column;
+		  -webkit-box-orient: vertical;
+		  box-orient: vertical;
+		  -webkit-flex-direction: column;
+		  flex-direction: column;
+		}
+		 .inner{
+		   -webkit-box-flex: 1;
+		  -webkit-flex: 1;
+		  -ms-flex: 1;
+		  flex: 1;
+		  overflow-y: scroll;
+		  -webkit-overflow-scrolling: touch;
+		 }
+		.inner .item{
+		   display: block;
+		  -ms-flex-align: center;
+		  -webkit-box-align: center;
+		   box-align: center;
+		  -webkit-align-items: center;
+		   align-items: center;
+		}
+		.opacity {
+		  -webkit-animation: opacity 0.5s linear;
+		  animation: opacity 0.5s linear;
+		}
+		@-webkit-keyframes opacity {
+		    0% {
+		        opacity:0;
+		    }
+		    100% {
+		        opacity:1;
+		    }
+		}
+		@keyframes opacity {
+		    0% {
+		        opacity:0;
+		    }
+		    100% {
+		        opacity:1;
+		    }
+		}
+		.dropload-up,.dropload-down{
+		    position: relative;
+		    height: 0;
+		    overflow: hidden;
+		    -webkit-transform:translate3d(0,0,0);
+		    transform:translate3d(0,0,0);
+		}
+		.dropload-refresh,.dropload-update,.dropload-load{
+		    position: absolute;
+		    left: 50%;
+		    bottom: 0;
+		    width: 100%;
+		    height: 50px;
+		    line-height: 50px;
+		    text-align: center;
+		    -webkit-transform:translate(-50%,0);
+		    transform:translate(-50%,0);
+		}
+		.dropload-load .loading{
+		    display: inline-block;
+		    height: 15px;
+		    width: 15px;
+		    border-radius: 100%;
+		    margin: 6px;
+		    border: 2px solid #666;
+		    border-bottom-color: transparent;
+		    vertical-align: middle;
+		    -webkit-animation: rotate 0.75s 0 linear infinite;
+		    animation: rotate 0.75s 0 linear infinite;
+		}
+		@-webkit-keyframes rotate {
+		    0% {
+		        -webkit-transform: rotate(0deg);
+		    }
+		    50% {
+		        -webkit-transform: rotate(180deg);
+		    }
+		    100% {
+		        -webkit-transform: rotate(360deg);
+		    }
+		}
+		@keyframes rotate {
+		    0% {
+		        transform: rotate(0deg);
+		    }
+		    50% {
+		        transform: rotate(180deg);
+		    }
+		    100% {
+		        transform: rotate(360deg);
+		    }
+		}
+
+
+
+
+
