报名活动修改

--- a/CampD/WebContent/static/css/common.css
+++ b/CampD/WebContent/static/css/common.css
@@ -1770,5 +1770,8 @@ a:hover{text-decoration:none;}
 .ul-box .data-list li{
 	display:block;
 }
-
+/*活动图片宽度调整*/
+.inner .itemwidth{
+	width:100%;
+}
 
