--- a/CampD/WebContent/static/css/common.css
+++ b/CampD/WebContent/static/css/common.css
@@ -142,7 +142,6 @@ a:hover{text-decoration:none;}
 	height:51px;
 	line-height:51px;
 	font-size:19px;
-	margin-bottom:9px;
 }
 .header .head-left-icon{
 	position:absolute;
@@ -260,7 +259,7 @@ a:hover{text-decoration:none;}
 .ui-tips-box .colorBlue:link{color:#638ee0; text-decoration:none;}
 .ui-tips-box .colorBlue:avtive{color:#638ee0; text-decoration:none;}
 .ul-box{padding:0 5px;}
-.ul-box .data-list li{background:#fff;padding:6px;margin-bottom:8px;}
+.ul-box .data-list li{background:#fff;padding:6px;margin-top:8px;}
 .ul-box .data-list li .data-li-left, .ul-box .data-list li .data-li-right{float:left;}
 .ul-box .data-list li .data-li-right{width:63%;margin-top:-3px;}
 .ul-box .data-list li .data-li-left{margin-right:10px;}
@@ -276,7 +275,6 @@ a:hover{text-decoration:none;}
 }
 .nav-box{
 	position:relative;
-	margin-bottom:10px;
 }
 .nav-box .nav-list{
 	background:#fff;
@@ -475,11 +473,12 @@ a:hover{text-decoration:none;}
 }*/
 .search-box{
 	padding-right:10px;
-	margin-bottom:-8px;
 	position:relative;
-	margin-top:96px;
+	margin-top:101px;
 	line-height:45px;
 	z-index:36;
+	background:#fff;
+	margin-bottom:-8px;
 }
 .search-box .search-parent-list li{
 	float:left;
@@ -516,12 +515,13 @@ a:hover{text-decoration:none;}
 .search-box .search-detail{
 	position:absolute;
 	left:0;
-	top:44px;
+	top:46px;
 	z-index:36;
 	background:#fff;
 	padding-top:16px;
 	padding-bottom:6px;
 	width:100%;
+	min-height:65%;
 }
 .search-box .search-detail li{
 	float:left;
@@ -1489,7 +1489,7 @@ a:hover{text-decoration:none;}
 	width:100%;
 	height:100%;
 	/*position:absolute;*/
-	background:#fff;
+	background:#f0f0f0;
 	top:140px;
 	}
  .gift-list-pic .giftpic{
@@ -1737,15 +1737,16 @@ a:hover{text-decoration:none;}
     height: 15px;
     width: 15px;
     border-radius: 100%;
-    margin: 6px;
+    margin: 16px;
+  	left: 25%;
     border: 2px solid #666;
     border-bottom-color: transparent;
-    vertical-align: middle;
     -webkit-animation: rotate 0.75s 0 linear infinite;
     animation: rotate 0.75s 0 linear infinite;
 }
 @-webkit-keyframes rotate {
     0% {
+        
         -webkit-transform: rotate(0deg);
     }
     50% {
@@ -1774,4 +1775,27 @@ a:hover{text-decoration:none;}
 .inner .itemwidth{
 	width:100%;
 }
-
+/*筛选提示*/
+.choose{
+	width:100%;
+	z-index:34;
+}
+.choose .chose{
+	padding:7px 14px;
+	width:33%;
+}
+.choose .chose .cpic{
+   position:absolute;
+   margin-top:5px;
+   width:25%;
+   backgroud-repeat:no-repeat;
+}
+.choose .chose .cword{
+	color:#cba34b;
+	position:relative;
+	width:100%;
+	text-align:center;
+}
+.gift-inner{
+	margin-top:8px;
+}
