--- a/CampD/WebContent/static/css/common.css
+++ b/CampD/WebContent/static/css/common.css
@@ -1484,6 +1484,7 @@ a:hover{text-decoration:none;}
 	background:#fff;
 	position:relative;
 	margin-bottom:10px;
+	margin-top:8px;
 	}
  .gift-list-pic{
 	width:100%;
