--- a/CampD/WebContent/static/css/common.css
+++ b/CampD/WebContent/static/css/common.css
@@ -687,6 +687,7 @@ a:hover{text-decoration:none;}
     background:#fff;
     border-bottom: 1px solid rgba(16,2,7,0.06);
     color:#484848;
+    margin-top:8px;
 }
 .main .contain .ul-box{
 	padding:0;
