--- a/CampD/WebContent/static/common/swipe/css/swipe.css
+++ b/CampD/WebContent/static/common/swipe/css/swipe.css
@@ -3,7 +3,7 @@
 .addWrap .swipe{overflow: hidden;visibility: hidden;position:relative;}
 .addWrap .swipe-wrap{overflow:hidden;position:relative;}
 .addWrap .swipe-wrap > div {float: left;width: 100%;position:relative;}
-#position{ position:absolute; bottom:60px; right:0; padding-right:8px; margin:0; opacity: 0.4; width:100%; filter: alpha(opacity=50);text-align:right;}
+#position{ position:absolute; top:30px; right:0; padding-right:8px; margin:0; opacity: 0.4; width:100%; filter: alpha(opacity=50);text-align:right;}
 #position li{width:10px;height:10px;margin:0 2px;display:inline-block;-webkit-border-radius:5px;border-radius:5px;background-color:#AFAFAF;}
 #position li.cur{background-color:#FF0000;}
 .img-responsive { display: block; width:100%;}
