--- a/CampD/WebContent/static/css/common.css
+++ b/CampD/WebContent/static/css/common.css
@@ -697,8 +697,6 @@ a:hover{text-decoration:none;}
     background:#fff;
     border-bottom: 1px solid rgba(16,2,7,0.06);
     color:#484848;
-    margin-bottom: -8px;
-    margin-top: 8px;
 }
 .main .contain .ul-box{
 	padding:0;
@@ -1234,8 +1232,10 @@ a:hover{text-decoration:none;}
 	display:block;
 	}
 .ul-box .data-list .gift-list{
-	height:78px;
 	position:relative;
+	width:100%;
+	overflow:hidden;
+	padding-bottom:11px;
 	}
 .mat5{
 	margin-top:5px;
@@ -1243,7 +1243,11 @@ a:hover{text-decoration:none;}
 .gift-list .gift-li-left{
 	display:block;
 	margin-right:10px;
+	width:28%;
 	}
+.gift-list .gift-li-left img{
+	min-height:70px;
+}	
 .gift-list .gift-li-right .title{
 	padding-top:7px;
 	font-size:14px;
@@ -1382,8 +1386,7 @@ a:hover{text-decoration:none;}
 	height:130px;
 	}
 .mainlist .piclist .mainpic{
-	width:30%;
-	margin-left:2%;
+	width:50%;
     text-align:center;
 	padding-top:17px;
 	}	
@@ -1476,6 +1479,7 @@ a:hover{text-decoration:none;}
 .space-li-right .title{
 	font-size:14px;
 	color:#000;
+	line-height:20px;
 	}
 .space-li-right	 .address{
 	color:#a5a5a5;
@@ -1825,3 +1829,23 @@ a:hover{text-decoration:none;}
 /*活动详情页地图修改*/
 .actdress{color:#000;margin-bottom:3px;}
 .padl6{padding-left:6px;}
+/*首页精品场地列表修改（自适应）*/
+.ul-box .highspace-list {
+	padding-top:2px;
+}
+/*场地首页自适应修改*/
+.ul-box .data-list .item{
+	width:100%;
+	overflow:hidden;
+}
+.data-list .item .data-li-left{
+	width:30%;
+}
+.data-list .item .data-li-right{
+	line-height:19px;
+	width:70%;
+}
+.data-list .item .data-li-left img{
+	min-height:70px;
+	width:100%;
+}
