index页增加了foot，以及相关的两个静态页面

--- a/CampD/WebContent/static/css/common.css
+++ b/CampD/WebContent/static/css/common.css
@@ -1506,7 +1506,7 @@ a:hover{text-decoration:none;}
 	padding-right:3px;
 	}	
 .gift{
-	background:#fff;
+	/* background:#fff; */
 	position:relative;
 	margin-bottom:10px;
 	margin-top:8px;
@@ -1859,3 +1859,27 @@ a:hover{text-decoration:none;}
 .mar15{
 	margin-right:16px;
 }
+/**index增加foot*/
+.footdes{background:#f0f0f0;margin-top:28px;position:relative;margin-bottom: -20px;}
+.about{width:100%;line-height:32px;margin-bottom:15px;}
+.about .aboutus{width:45%;text-align:center;display:inline-block;}
+.about .aboutus .bird{margin-left:34%;padding-top:4px;margin-right:8px;}
+.us{color:#454545;font-size: 14px;margin-left: -23px;}
+.fchar{color:#b4b4b4;width:4%;text-align:center;display:inline-block;}
+.aboutus .blink{margin-left:12%;padding-top:6px;margin-right:-14px;}
+.aboutus  .rights{color:#454545;margin-left:-28px; font-size: 14px;}
+.logoimg2{width:100%;text-align:center;}
+.icp{background:#adadad;text-align:center;line-height:40px;color:#f1f1f1;position:relative;margin-top:12px;font-size:13px;}
+/*公司介绍和版权声明*/
+.campany{width:100%;text-align:center;line-height:60px;}
+.campanypic1{display:inline-block;width:55%;}
+.campanypic2{display:inline-block;width:40%;margin-top:20px;}
+.description{margin-top:20px;padding:0px 5px 0px 5px;}
+.description  p{line-height:32px; font-size:14px;}
+
+
+
+
+
+
+
