--- a/CampD/WebContent/static/css/common.css
+++ b/CampD/WebContent/static/css/common.css
@@ -1875,11 +1875,11 @@ a:hover{text-decoration:none;}
 .description  p{line-height:32px; font-size:14px;}
 /*办公空间搜索框*/
 .searchAll{position:relative;margin-left:24%;width:63%;margin-right:13%;margin-top:-3px;}
-.searchBorder{border:1px solid #f0f0f0;width:100%;line-height:30px;border-radius:15px;padding-left:25px;background:#eeeff3;margin-top:13px;font-size:16px;color:0e0e0e;}
-.searchPic{position: fixed;top: 18px;left: 26%;display: block;z-index: 42;}
-.searchDel{position: fixed;top: 17px;right:15%;display: block;z-index: 42;margin-left:10px;}
+.searchBorder{border:1px solid #f0f0f0;width:100%;line-height:26px;border-radius:15px;padding-left:25px;background:#eeeff3;margin-top:13px;font-size:16px;color:0e0e0e;-webkit-appearance:none;-webkit-tap-highlight-color:rgba(255,255,255,0);}
+.searchPic{position: fixed;top: 17px;left: 26%;display: block;z-index: 42;}
+.searchDel{position: fixed;top: 16px;right:15%;display: block;z-index: 42;margin-left:10px;}
 /*搜索结果列表*/
-.searchMc{position:fixed;top:51px;background:#ffffff;z-index:60;width:100%;}
+.searchMc{position:fixed;top:51px;background:#ffffff;z-index:60;width:100%;overflow-y:scroll;}
 .searchRes a{line-height:35px;border-bottom:1px solid #f0f0f0;width:100%;font-size:14px;padding-left:10px;color:#434343;}
 /*品牌 区域 价位 地铁*/
 .bandlist{width:100%;line-height:40px;background:#ffffff;position:fixed;top:50px;text-align:center;z-index:42;border-top:1px solid #f0f0f0;padding:0px;}
