--- a/CampD/WebContent/static/css/common.css
+++ b/CampD/WebContent/static/css/common.css
@@ -1350,7 +1350,7 @@ a:hover{text-decoration:none;}
     position: absolute;
     top: 4px;
     right: 2px;
-    width: 49px;
+    width: 47px;
     height: 50px;
     text-align: center;
 }
@@ -1874,10 +1874,10 @@ a:hover{text-decoration:none;}
 .description{margin-top:20px;padding:0px 5px 0px 5px;}
 .description  p{line-height:32px; font-size:14px;}
 /*办公空间搜索框*/
-.searchAll{position:relative;margin-left:24%;width:60%;margin-top:-3px;}
-.searchBorder{border:1px solid #f0f0f0;width:85%;line-height:26px;border-radius:15px;padding-left:25px;background:#eeeff3;margin-top:13px;font-size:14px;color:0e0e0e;-webkit-appearance:none;-webkit-tap-highlight-color:rgba(255,255,255,0);}
-.searchPic{position: fixed;top: 17px;left: 26%;display: block;z-index: 42;}
-.searchDel{position: fixed;top: 16px;right:27%;display: block;z-index: 42;margin-left:10px;display:none;}
+.searchAll{position:relative;margin-left:24%;width:62%;margin-top:-3px;}
+.searchBorder{border:1px solid #f0f0f0;width:100%;line-height:26px;border-radius:15px;padding-left:13px;background:#eeeff3;margin-top:13px;font-size:14px;color:0e0e0e;-webkit-appearance:none;-webkit-tap-highlight-color:rgba(255,255,255,0);}
+.searchPic{position: fixed;top: 17px;right: 17%;display: block;z-index: 42;}
+.searchDel{position: fixed;top: 16px;right:17%;display: block;z-index: 42;margin-left:10px;display:none;}
 .searchWord{position: fixed;top: 0px;right: 15%;display:inline;z-index: 42;margin-left: 10px; color: #a5a5a5;font-size: 14px;}
 /*搜索结果列表*/
 .searchMc{position:fixed;top:51px;background:#ffffff;z-index:60;width:100%;overflow-y:scroll;}
